# subxt

./: .env-example  .gitignore  .rustfmt.toml  CHANGELOG.md  CODEOWNERS  Cargo.toml  FILE_TEMPLATE  LIB_DOC.md  LICENSE  LICENSE_TEMPLATE  README.md  RELEASING.md  TEMP.rs  TEMP_METADATA.json  balances.json  clippy.toml  difference.txt  flake.nix  index.html  md.json  polka.json  polka.rs  polkadot.rs  polkav14.json  rustfmt.toml  tree  types.json
cli/: Cargo.toml  README.md  build.rs  enjin.scale  enjin2.scale  output.txt
cli/src/: main.rs  utils.rs
client/: .gitignore  Cargo.toml  gen-chain-spec.sh  metadata.scale  purge-chain.sh  run.sh
client/src/: lib.rs  tests.rs
codegen/: Cargo.toml  polka_runtime.rs
codegen/src/: api.rs  derives.rs  error.rs  fetch_metadata.rs  ir.rs  lib.rs  struct_def.rs  types.rs
core/: Cargo.toml  README.md
core/no_std_tests/: Cargo.toml
core/src/: client.rs  dynamic.rs  error.rs  error_utils.rs  events.rs  lib.rs  macros.rs  marker.rs  prelude.rs  runtime_api.rs
examples/: Cargo.toml  README.md  batch_calls.rs  custom_config.rs  custom_type_derives.rs  fetch_all_accounts.rs  fetch_remote.rs  kusama_balance_transfer.rs  polkadot_balance_transfer.rs  reserve_shares_and_watch.rs  submit_and_watch.rs  transfer_subscribe.rs
examples/examples/: balance_transfer.rs  balance_transfer_status_stream.rs  balance_transfer_with_params.rs  basic_balance_transfer.rs  beefy_subscribe.rs  block_extrinsics.rs  blocks_subscribing.rs  call_bridge.rs  chainhead_subscription.rs  check.rs  concurrent_storage_requests.rs  constants_static.rs  custom_config.rs  custom_metadata_url.rs  custom_rpc_client.rs  custom_type_derives.rs  dynamic_multisig.rs  dynamic_nested_query.rs  dynamic_queries.rs  events.rs  fetch_all_accounts.rs  fetch_constants.rs  fetch_remote.rs  fetch_staking_details.rs  metadata_compatibility.rs  multisig.rs  no_default_derives.rs  polkadot_metadata.scale  rpc_call.rs  rpc_call_subscribe_blocks.rs  runtime_apis_dynamic.rs  runtime_apis_raw.rs  runtime_apis_static.rs  runtime_call_enum.rs  runtime_calls.rs  runtime_types_only.rs  setup_client_custom_config.rs  setup_client_custom_rpc.rs  setup_client_offline.rs  stack_8663.rs  (+20 more)
examples/ffi-example/: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
examples/parachain-example/: Cargo.toml  README.md  asset-hub-zombienet.toml  table.md
examples/wasm-example/: Cargo.toml  README.md  index.html  index.js  index.scss
examples/wasm_examples/: Cargo.toml
historic/: CHANGELOG.md  Cargo.toml  README.md
historic/examples/: extrinsics.rs  storage.rs
historic/src/: client.rs  config.rs  error.rs  extrinsics.rs  lib.rs  storage.rs  utils.rs
integration-tests/: Cargo.toml
integration-tests/src/: lib.rs
integration-tests/tests/: codegen_documentation.rs
lightclient/: Cargo.toml
lightclient/src/: background.rs  chain_config.rs  client.rs  lib.rs  rpc.rs  shared_client.rs
macro/: Cargo.toml
macro/src/: generate_types.rs  lib.rs  wasm_loader.rs
metadata/: Cargo.toml  types.json
metadata/benches/: bench.rs
metadata/src/: lib.rs  main.rs  retain.rs  stripped.rs  validation.rs
metadata/test-assets/: node_template.scale  node_template_swap.scale
metadata/test_data/: metadata1.scale
new/: Cargo.toml
new/examples/: block_decoding_static.rs  blocks_subscribing.rs  light_client_basic.rs  rpc_legacy.rs  runtime_apis_dynamic.rs  runtime_apis_static.rs  setup_client_offline.rs  setup_config_assethub.rs  setup_config_custom.rs  setup_config_transaction_extension.rs  setup_reconnecting_rpc_client.rs  setup_rpc_chainhead_backend.rs  storage_fetch.rs  storage_iterating.rs  tx_basic.rs  tx_partial.rs  tx_status_stream.rs
new/src/: backend.rs  client.rs  config.rs  constants.rs  custom_values.rs  error.rs  events.rs  extrinsics.rs  lib.rs  runtime_apis.rs  storage.rs  transactions.rs  utils.rs  view_functions.rs
proc-macro/: Cargo.toml
proc-macro/src/: call.rs  event.rs  generate_runtime.rs  generate_types.rs  lib.rs  module.rs  store.rs  test.rs  utils.rs
proc-macro/tests/: balances.rs
rpcs/: Cargo.toml  README.md
rpcs/examples/: basic_rpc_usage.rs  chainhead_rpcs.rs  chainhead_subscription.rs  custom_config.rs  legacy_rpcs.rs
rpcs/src/: lib.rs  macros.rs  utils.rs
scripts/artifacts/: Cargo.toml
signer/: Cargo.toml  README.md
signer/examples/: ecies.rs
signer/src/: ecdsa.rs  eth.rs  json.rs  lib.rs  polkadot_js_compat.rs  sr25519.rs  utils.rs
signer/wasm-tests/: Cargo.toml
src/: lib.rs  (+18 more)
subxt/: Cargo.toml  build.rs  expand.rs
subxt-light-client/: Cargo.toml  build.rs  gen.sh
subxt-light-client/src/: lib.rs
subxt/examples/: advanced_decoding.rs  block_decoding_dynamic.rs  block_decoding_static.rs  blocks.rs  blocks_subscribing.rs  config_assethub.rs  config_eth.rs  config_with_multilocation_asset_id.rs  connect_to_a_parachain.rs  constants_dynamic.rs  constants_static.rs  dynamic.rs  ecdsa_tx.rs  events.rs  frontier_eth.rs  historic_blocks.rs  legacy_reconnecting_rpc_client.rs  legacy_rpc.rs  light_client.rs  light_client_basic.rs  light_client_local_node.rs  light_client_parachains.rs  light_client_tx_basic.rs  metadata_config.rs  polkadot_metadata.scale  polkadot_monitor.rs  reconnecting_rpc_client.rs  rpc_client.rs  rpc_legacy.rs  runtime_apis.rs  runtime_apis_dynamic.rs  runtime_apis_raw.rs  runtime_apis_static.rs  setup_client_custom_config.rs  setup_client_custom_rpc.rs  setup_client_offline.rs  setup_config_assethub.rs  setup_config_custom.rs  setup_config_signed_extension.rs  setup_config_transaction_extension.rs  (+24 more)
subxt/src/: backend.rs  book.rs  client.rs  client_OLD.rs  config.rs  constants.rs  custom_values.rs  dynamic.rs  error.rs  events.rs  extrinsics.rs  introduction.rs  lib.rs  macros.rs  metadata.rs  prelude.rs  rpc.rs  runtime_apis.rs  storage.rs  subscription.rs  transaction.rs  transactions.rs  u8_map.rs  updates.rs  utils.rs  view_functions.rs
test-node/: Cargo.toml  build.rs
test-node-proc/: Cargo.toml
test-runtime/: Cargo.toml  README.md  build.rs
tests/: Cargo.toml  node_runtime.scale
value/: Cargo.toml
(+796 files in other folders)
