[package]
name = "subxt-cli"
version = "0.23.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"

license = "Apache-2.0 OR GPL-3.0"
repository = "https://github.com/paritytech/subxt"
documentation = "https://docs.rs/subxt-cli"
homepage = "https://www.parity.io/"
description = "Command line utilities for working with subxt codegen"

[[bin]]
name = "subxt"
path = "src/main.rs"

[dependencies]
# perform subxt codegen
subxt-codegen = { version = "0.23.0", path = "../codegen" }
# perform node compatibility
subxt-metadata = { version = "0.23.0", path = "../metadata" }
# parse command line args
structopt = "0.3.25"
# colourful error reports
color-eyre = "0.6.1"
# serialize the metadata
serde = { version = "1.0.130", features = ["derive"] }
# serialize as json
serde_json = "1.0.68"
# hex encoded metadata to bytes
hex = "0.4.3"
# actual metadata types
frame-metadata = { version = "15.0.0", features = ["v14", "std"] }
# decode bytes into the metadata types
scale = { package = "parity-scale-codec", version = "3.0.0", default-features = false }
# generate the item mod for codegen
syn = "1.0.80"
# communicate with the substrate nodes
jsonrpsee = { version = "0.15.1", features = ["async-client", "client-ws-transport", "http-client"] }
# async runtime
tokio = { version = "1.8", features = ["rt-multi-thread", "macros", "time"] }
