[package]
name = "subxt-cli"
version = "0.28.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = true

license.workspace = true
repository.workspace = true
documentation = "https://docs.rs/subxt-cli"
homepage.workspace = true
description = "Command line utilities for working with subxt codegen"

[[bin]]
name = "subxt"
path = "src/main.rs"

[dependencies]
# perform subxt codegen
subxt-codegen = { version = "0.28.0", path = "../codegen" }
# perform node compatibility
subxt-metadata = { version = "0.28.0", path = "../metadata" }
# parse command line args
clap = { version = "4.1.11", features = ["derive", "cargo"] }
# colourful error reports
color-eyre = "0.6.1"
# serialize the metadata
serde = { version = "1.0.159", features = ["derive"] }
# serialize as json
serde_json = "1.0.95"
# hex encoded metadata to bytes
hex = "0.4.3"
# actual metadata types
frame-metadata = { version = "15.0.0", features = ["v14", "std"] }
# decode bytes into the metadata types
scale = { package = "parity-scale-codec", version = "3.0.0", default-features = false }
# generate the item mod for codegen
syn = "1.0.109"
# communicate with the substrate nodes
jsonrpsee = { version = "0.16.0", features = ["async-client", "client-ws-transport", "http-client"] }
# async runtime
tokio = { version = "1.27", features = ["rt-multi-thread", "macros", "time"] }
