[package]
name = "subxt-client"
version = "0.1.0"
authors = [
    "David Craven <david@craven.ch>",
    "Parity Technologies <admin@parity.io>",
]
edition = "2018"

license = "GPL-3.0"
repository = "https://github.com/paritytech/substrate-subxt"
documentation = "https://docs.rs/substrate-subxt-client"
homepage = "https://www.parity.io/"
description = "Embed a substrate node into your subxt application."
keywords = ["parity", "substrate", "blockchain"]

[dependencies]
async-std = { version = "1.8.0", features = ["tokio1"] }
futures = "0.3.9"
jsonrpsee = { version = "0.8.0", features = ["async-client"] }
log = "0.4.13"
thiserror = "1.0.23"
serde_json = "1"

sc-client-db = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-keyring = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
sc-network = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
sc-service = { git = "https://github.com/paritytech/substrate.git", branch = "master" }

tokio = { version = "1.16", features = ["rt-multi-thread"] }

[target.'cfg(target_arch="x86_64")'.dependencies]
sc-service = { git = "https://github.com/paritytech/substrate.git", branch = "master", default-features = false, features = [
    "wasmtime",
] }

[dev-dependencies]
async-std = { version = "1.8.0", features = ["attributes"] }
env_logger = "0.9"
tracing-subscriber = { version = "0.3.3", features = ["env-filter"] }
node-cli = { git = "https://github.com/paritytech/substrate.git", branch = "master", default-features = false }
tempdir = "0.3.7"
subxt = { path = "../subxt" }
test-runtime = { path = "../test-runtime" }
