[package]
name = "subxt-examples"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

license.workspace = true
repository.workspace = true
documentation.workspace = true
homepage.workspace = true
description = "Subxt example usage"

[dev-dependencies]
subxt = { workspace = true, default-features = false, features = ["default", "experimental-light-client"]}
tokio = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
sp-keyring = { workspace = true }
